--- a/DSC Analysis_2.Rmd
+++ b/DSC Analysis_2.Rmd
@@ -43,9 +43,11 @@ DSC$file <- NULL
 ```
 
 ```{r}
-Area_under_curve <- DSC %>%
-   group_by(Material) %>%
-  mutate(Hc = AUC(Datos$Ts, Datos$Value, From= 100, to= 120, method = "step"))
+Area_under_curve <- 
+  DSC %>%
+  group_by(Material) %>%
+  mutate(Hc = AUC(Datos$Ts, 
+                  Datos$Value, From= 100, to= 120, method = "step"))
 
 Area_under_curve <- DSC %>%
    group_by(Material) %>%
@@ -78,8 +80,8 @@ DSC %>%
   group_by(Material) %>%
    ggplot(aes(x = Ts, y = Value, color = Material)) +
   geom_line()+
-  facet_wrap( ~ Material , ncol=1)
-coord_cartesian(
+  facet_wrap( ~ Material , ncol=1) +
+  coord_cartesian(
   xlim = c(-20, -300),
   expand = TRUE,
   default = FALSE,
